--- a/index.html
+++ b/index.html
@@ -11,41 +11,48 @@
   <link rel="stylesheet" href="styles.css?v=20251006" />
 </head>
 <body>
-  <header>
-    <h1>Hotspot Routing Web App</h1>
-  </header>
   <main>
     <aside class="sidebar">
       <section class="panel">
         <div class="actions">
           <button id="computeBtn" class="primary">Compute Route</button>
         </div>
-        <div class="form-row">
-          <label class="checkbox">
-            <input type="checkbox" id="toggleAllSegments" /> Show all segments (NxN dashed)
-          </label>
-        </div>
-        <div class="form-row">
-          <label class="checkbox">
-            <input type="checkbox" id="toggleMockApi" /> Use mock durations (disable external API)
-          </label>
-        </div>
+        <!-- toggles moved to floating controls -->
       </section>
       <section class="panel" id="hotspotsPanel">
-        <h2>Hotspots</h2>
-        <div id="hotspotList"></div>
         <label for="startSelect" class="label">Start</label>
         <select id="startSelect"></select>
         <label for="endSelect" class="label">End</label>
         <select id="endSelect"></select>
+        <h2>Hotspots</h2>
+        <div id="hotspotList"></div>
       </section>
+    </aside>
+    <div id="map"></div>
+    <aside class="rightbar floating-card hidden">
       <section class="panel" id="resultsPanel">
         <h2>Results</h2>
         <div id="summary"></div>
         <ol id="orderList"></ol>
       </section>
     </aside>
-    <div id="map"></div>
+    <!-- Bottom-right floating toggles -->
+    <div class="floating-controls" aria-label="Map toggles">
+      <div class="toggle-item">
+        <span class="toggle-label">Show all segments</span>
+        <label class="switch">
+          <input type="checkbox" id="toggleAllSegments" />
+          <span class="slider"></span>
+        </label>
+      </div>
+      <div class="toggle-item">
+        <span class="toggle-label">Use mock duration</span>
+        <label class="switch">
+          <input type="checkbox" id="toggleMockApi" />
+          <span class="slider"></span>
+        </label>
+      </div>
+    </div>
   </main>
   <script
     src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
