--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <link rel="stylesheet" href="styles.css?v=20251006" />
 </head>
 <body>
+  <header class="topbar" aria-label="Primary">
+    <button id="menuToggle" class="icon-btn" aria-label="Open menu">☰</button>
+    <div class="spacer"></div>
+    <button id="resultsToggle" class="icon-btn" aria-label="Open results">Results</button>
+  </header>
   <main>
     <aside class="sidebar">
       <section class="panel">
@@ -29,6 +34,7 @@
       </section>
     </aside>
     <div id="map"></div>
+    <button id="mapFabCompute" class="map-fab" aria-label="Compute route">▶︎ Compute</button>
     <aside class="rightbar floating-card hidden">
       <section class="panel" id="resultsPanel">
         <h2>Results</h2>
@@ -53,6 +59,7 @@
         </label>
       </div>
     </div>
+    <div class="overlay" id="overlay" aria-hidden="true"></div>
   </main>
   <script
     src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
