--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <header class="topbar" aria-label="Primary">
     <button id="menuToggle" class="icon-btn" aria-label="Open menu">☰</button>
     <div class="spacer"></div>
+    <button id="headerCompute" class="icon-btn" aria-label="Compute route">Compute</button>
     <button id="resultsToggle" class="icon-btn" aria-label="Open results">Results</button>
   </header>
   <main>
@@ -34,7 +35,7 @@
       </section>
     </aside>
     <div id="map"></div>
-    <button id="mapFabCompute" class="map-fab" aria-label="Compute route">▶︎ Compute</button>
+    <!-- removed mapFabCompute button -->
     <aside class="rightbar floating-card hidden">
       <section class="panel" id="resultsPanel">
         <h2>Results</h2>
